code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_indirect_13.wast
(assert_invalid
  (module
    (type (func))
    (table 0 funcref)
    (func $type-void-vs-num (i32.eqz (call_indirect (type 0) (i32.const 0))))
  )
  "type mismatch"
)